--- a/frontend/src/styles/FormularioRegistro.css
+++ b/frontend/src/styles/FormularioRegistro.css
@@ -4,25 +4,27 @@ html,
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     box-sizing: border-box;
 }
 
 /* Contenedor principal */
 .box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
     padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
 }
 
 /* Contenedor del formulario */
 .box_form {
     background-color: #fff;
-    padding: 40px 30px;
     width: 100%;
+    height: auto;
     max-width: 600px;
+    min-height: 400px;
     text-align: center;
 }
 
@@ -58,11 +60,11 @@ html,
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 1rem;
-    transition: border-color 0.2s, ;
+    transition: border-color 0.2s, box-shadow 0.2s;
 }
 
 .box_formulario_inputs:focus {
-    box-shadow: 0 0 0 3px rgb(0,113,206,0.48);
+    box-shadow: 0 0 0 3px rgb(0, 113, 206, 0.48);
     outline: none;
     z-index: 1;
     transition: 0.2s;
@@ -110,12 +112,27 @@ html,
 
 
 /* Responsivo para pantallas pequeñas */
+
 @media (max-width: 480px) {
+
+    .box {
+        min-height: 80dvh;
+    }
+
     .box_form {
+        width: 100%;
+        max-width: 90%;
         padding: 30px 20px;
+        margin: auto;
     }
 
     .box_form h2 {
         font-size: 1.5rem;
+    }
+    .box_formulario label{
+        width: 100%;
+    }
+    .box_formulario_inputs{
+        width: 100%;
     }
 }
