--- a/frontend/src/styles/NavbarSesion.css
+++ b/frontend/src/styles/NavbarSesion.css
@@ -117,5 +117,8 @@ body {
 
     .nav-menu ul li {
         margin: 0;
+        width: 250px;
+        text-align: center;
+        border-bottom: 2px solid rgba(217, 215, 215, 0.5);
     }
 }
