--- a/frontend/src/styles/EventosDestacados.css
+++ b/frontend/src/styles/EventosDestacados.css
@@ -17,20 +17,12 @@
   background: rgba(255,255,255,0.95);
 }
 
-.evento-imagen, .img-placeholder {
+.evento-imagen{
   width: fit-content;
   height: 100px;
   object-fit: cover;
   background: #555;
   box-shadow: 0 2px 8px rgba(0,0,0,0.07);
-}
-
-.img-placeholder {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #aaa;
-  font-size: 2rem;
 }
 
 .evento-info h3 {
