--- a/frontend/src/styles/Inicio.css
+++ b/frontend/src/styles/Inicio.css
@@ -15,7 +15,6 @@ body {
   align-items: flex-start;
   justify-content: center;
   color: white;
-  text-shadow: 1px 1px 4px #000;
   margin-top: 20px;
 }
 
@@ -50,8 +49,18 @@ body {
   transition: all 0.3s ease;
 }
 
+.categoria a{
+  text-decoration: none;
+  color: #000;
+  padding: 20px;
+}
+
 .categoria:hover {
-  background-color: #0033cc;
+  background-color: #48f;
   color: white;
+}
+
+.categoria a:hover{
+  color: #fff;
 }
 
