--- a/frontend/src/styles/NavbarSesion.css
+++ b/frontend/src/styles/NavbarSesion.css
@@ -12,19 +12,11 @@ body {
 
 .header {
     background: #48f;
-    padding: 40px;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: auto;
-}
-
-.header-logo {
-    width: 20%;
-    display: flex;
-    align-items: center;
-    margin-left: 4rem;
-    margin-right: 1rem;
 }
 
 .nav-menu {
@@ -58,7 +50,7 @@ body {
 
 /*Boton hamburguesa*/
 
-.hamburger {
+.hamburgerSesion {
     display: none;
     font-size: 2rem;
     color: #fff;
@@ -66,11 +58,25 @@ body {
     margin-right: 1rem;
 }
 
+.logo-usuario{
+    width: 80px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-usuario img{
+    width: 30px;
+    height: 30px;
+    filter: invert(1);
+}
+
 @media(max-width:768px) {
-    .hamburger {
+    .hamburgerSesion {
         display: block;
-        position: fixed;
-        top: 20px;
+        position: absolute;
+        top: 45px;
         left: 20px;
         z-index: 2000;
     }
@@ -97,7 +103,7 @@ body {
         justify-content: flex-start;
         align-items: center;
         gap: 20px;
-        padding-top: 80px;
+        padding-top: 100px;
         transition: left 1s ease-out;
         z-index: 1000;
     }
@@ -105,7 +111,6 @@ body {
     .nav-menu.open {
         left: 0;
         z-index: 1001;
-        transition: ease-out 1s;
     }
 
     .nav-menu ul {
