se arreglan errores de sintaxis ademas de eso errores en varios archivos css, tambien hice que se pueda ver el perfil cuando este logueado y ademas de eso si esta logueado no se puedo volver a loguar y registrar, tambien puede cerrar sesion, hice verificacion de ubicacion para verificar si en el navbar se muestran las rutas de registrarse y iniciar sesion

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -24,7 +24,7 @@
     color: #fff
 }
 
-.nav-menu {
+.nav-menu-inicio {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,7 +32,7 @@
     transition: none;
 }
 
-.nav-menu ul {
+.nav-menu-inicio ul {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -41,11 +41,11 @@
     margin-left: 20px;
 }
 
-.nav-menu li {
+.nav-menu-inicio li {
     margin-left: 10px;
 }
 
-.nav-menu ul li a {
+.nav-menu-inicio ul li a {
     text-decoration: none;
     color: #fff;
     font-size: 16px;
@@ -96,7 +96,7 @@
         z-index: 1000;
     }
 
-    .nav-menu {
+    .nav-menu-inicio {
         position: fixed;
         top: 0;
         left: -100%;
@@ -116,13 +116,13 @@
         left: 0;
         z-index: 1001;
     }
-    .nav-menu ul{
+    .nav-menu-inicio ul{
         flex-direction:column;
         gap: 15px;
         padding: 0;
         margin: 0;
     }
-    .nav-menu ul li{
+    .nav-menu-inicio ul li{
         margin: 0;
         width: 250px;
         text-align: center;
