--- a/frontend/src/styles/Inicio.css
+++ b/frontend/src/styles/Inicio.css
@@ -42,6 +42,8 @@ body {
 
 .categoria {
   background-color: #eef;
+  text-decoration: none;
+  color: #000;
   padding: 20px 30px;
   border-radius: 8px;
   font-weight: bold;
