--- a/frontend/src/styles/NavbarSesion.css
+++ b/frontend/src/styles/NavbarSesion.css
@@ -21,7 +21,7 @@ body {
 
 .nav-menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     align-items: center;
     width: 80%;
     transition: none;
