--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
 }
 
-.eventos{
+.categorias-navbar{
     display: flex;
     justify-content: space-between;
 }
