--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -6,6 +6,26 @@
     transition-duration: 0.5s;
 }
 
+.form-busqueda {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    }
+
+.input-busqueda {
+    padding: 0.4rem 1rem;
+    border-radius: 1rem;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+}
+
+.boton-busqueda {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+
 .NavBar {
     background-color: #48f;
     display: flex;
