arreglo de diseños

--- a/frontend/src/styles/EventosDestacados.css
+++ b/frontend/src/styles/EventosDestacados.css
@@ -48,6 +48,8 @@
 }
 
 .FeaturedEvent__Img {
+  max-width: 300px;
+  max-height: 140px;
   overflow: hidden;
   flex: 1 1 50%;
   border-radius: 1rem;
