--- a/frontend/src/styles/PerfilAdmin.css
+++ b/frontend/src/styles/PerfilAdmin.css
@@ -87,6 +87,7 @@ body {
         gap: 1rem;
         margin-top: 0.5rem;
         margin: 0 0.5rem 0 0.5rem;
+        width: 100%;
     }
 
     .crear-evento button {
@@ -96,6 +97,7 @@ body {
         border-radius: 6px;
         cursor: pointer;
         transition: 0.3s ease;
+        width: 45%;
     }
 
     .crear-evento button:hover {
