--- a/frontend/src/styles/NavbarSesion.css
+++ b/frontend/src/styles/NavbarSesion.css
@@ -48,6 +48,19 @@ body {
     cursor: pointer;
 }
 
+.menu_item {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    align-items: center;
+    gap: 20px;
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 /*Boton hamburguesa*/
 
 .hamburgerSesion {
@@ -72,7 +85,30 @@ body {
     filter: invert(1);
 }
 
-@media(max-width:768px) {
+@media(min-width:1300px){
+    .header{
+        align-items: center;
+        gap: 30px;
+        height: 10%;
+    }
+    .nav-menu{
+        width: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .menu_item{
+        border-radius: 100%;
+    }
+    .menu_item:hover {
+        padding: 10px 15px;
+        letter-spacing: 3px;
+        background-color: #fff;
+        color: #48f;
+    }
+}
+
+@media (max-width: 1000px) {
     .hamburgerSesion {
         display: block;
         position: absolute;
@@ -85,11 +121,10 @@ body {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        /* semitransparente */
-        z-index: 1000;
+        background-color: #000a;
+        width: 100vw;
+        height: 100vh;
+        z-index: 999;
     }
 
     .nav-menu {
@@ -98,14 +133,14 @@ body {
         left: -100%;
         width: 250px;
         height: 100vh;
-        background-color: #48f;
         flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
+        background-color: #48f;
+        padding-top: 80px;
         gap: 20px;
-        padding-top: 100px;
-        transition: left 1s ease-out;
+        transition: left 1s ease-in-out;
         z-index: 1000;
+        justify-content: center;
+        align-items: center;
     }
 
     .nav-menu.open {
@@ -118,12 +153,46 @@ body {
         gap: 15px;
         padding: 0;
         margin: 0;
+        align-items: center;
     }
 
     .nav-menu ul li {
         margin: 0;
-        width: 250px;
+        width: 100%;
         text-align: center;
         border-bottom: 2px solid rgba(217, 215, 215, 0.5);
+    }
+
+    .menu_item {
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+        width: 100%;
+        text-align: center;
+        border-radius: 0;
+    }
+}
+
+@media (min-width: 1000px) {
+    .nav-menu {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        background: #48f;
+        padding: 0;
+        position: static;
+        height: auto;
+    }
+    .menu_item {
+        border-radius: 100px;
+        transition: background 0.3s, color 0.3s, letter-spacing 0.3s;
+    }
+    .menu_item:hover {
+        padding: 10px 15px;
+        letter-spacing: 3px;
+        background-color: #fff;
+        color: #48f;
     }
 }
