--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -21,6 +21,7 @@
     font-size: 1rem;
     background-color: transparent;
 }
+
 .Search__Input::placeholder {
     color: #fff9;
 }
@@ -64,6 +65,12 @@ nav {
     cursor: pointer;
 }
 
+.user-icono {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .LogoUser {
     width: 30px;
     filter: invert(1);
@@ -87,6 +94,84 @@ nav {
     cursor: pointer;
 }
 
+/*CARRITO ICONO*/
+.carrito-icono {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+/*MODAL*/
+/* Fondo oscuro */
+.CarritoOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: flex-end;
+    z-index: 999;
+    /* encima de todo */
+}
+
+/* Panel lateral */
+.CarritoSidebar {
+    background-color: #fff;
+    width: 320px;
+    max-width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    animation: slideIn 0.3s ease-out forwards;
+    box-shadow: -2px 0 8px rgba(0, 0, 0, 0.3);
+}
+
+
+/* Cabecera del carrito */
+.CarritoHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid #ddd;
+}
+
+/* Botón de cerrar */
+.CerrarCarrito {
+    background: none;
+    border: none;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+/* Contenido del carrito */
+.CarritoContenido {
+    flex: 1;
+    padding: 1rem;
+    overflow-y: auto;
+}
+
+/* Footer con botón */
+.CarritoFooter {
+    padding: 1rem;
+    border-top: 1px solid #ddd;
+}
+
+.IrAlCheckout {
+    width: 100%;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 0.75rem;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+
 @media (min-width: 1300px) {
     .NavBar {
         align-items: center;
@@ -94,7 +179,7 @@ nav {
         height: 10%;
     }
 
-    .NavBar__Menu--Close { 
+    .NavBar__Menu--Close {
         width: 100%;
         justify-content: space-around;
         align-items: center;
@@ -157,7 +242,18 @@ nav {
         width: 250px;
         text-align: center;
     }
+
     .Menu__Item:hover {
         letter-spacing: 3px;
+    }
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateX(100%);
+    }
+
+    to {
+        transform: translateX(0);
     }
 }
