--- a/frontend/src/styles/EventosCategoria.css
+++ b/frontend/src/styles/EventosCategoria.css
@@ -1,10 +1,5 @@
 .resultados-busqueda {
-    max-width: 1100px;
-    margin: 40px auto 0 auto;
-    padding: 24px;
-    background: #fff;
-    border-radius: 14px;
-    box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+    width: 100%;
 }
 
 .resultados-busqueda h2 {
@@ -15,8 +10,9 @@
 }
 
 .grid-eventos {
+    margin: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 32px;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-auto-flow: row;
+    gap: 20px;
 }
-
