--- a/frontend/src/styles/NavbarSesion.css
+++ b/frontend/src/styles/NavbarSesion.css
@@ -61,6 +61,10 @@ body {
     cursor: pointer;
 }
 
+.logo-sesion{
+    margin-left: 3rem;
+}
+
 /*Boton hamburguesa*/
 
 .hamburgerSesion {
@@ -139,7 +143,7 @@ body {
         gap: 20px;
         transition: left 1s ease-in-out;
         z-index: 1000;
-        justify-content: center;
+        justify-content: flex-start; /* Cambiado de center a flex-start */
         align-items: center;
     }
 
@@ -170,6 +174,11 @@ body {
         width: 100%;
         text-align: center;
         border-radius: 0;
+    }
+
+    /* NUEVO: Asegura que los botones estén justo debajo de la X */
+    .nav-menu ul {
+        margin-top: 30px; /* Espacio debajo de la X */
     }
 }
 
